[gd_scene load_steps=5 format=2]

[ext_resource path="res://Bullets/TouchControls/TouchControls/TouchButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Bullets/TouchControls/TouchControls/TouchControls.gd" type="Script" id=2]
[ext_resource path="res://Bullets/TouchControls/TouchControls/TouchButton.gd" type="Script" id=3]
[ext_resource path="res://Bullets/img/fscreen.png" type="Texture" id=4]

[node name="TouchControls" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchButtonRight" parent="." instance=ExtResource( 1 )]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -325.0
margin_top = -540.0
margin_right = 0.0
margin_bottom = 540.0

[node name="TouchButtonLeft" parent="." instance=ExtResource( 1 )]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -540.0
margin_bottom = 540.0
rect_scale = Vector2( -1, 1 )

[node name="FlashTimer" type="Timer" parent="."]
one_shot = true

[node name="TouchButtonFullscreen" type="Button" parent="."]
anchor_bottom = 1.0
margin_top = 14.661
margin_right = 9600.0
margin_bottom = -316.339
rect_min_size = Vector2( 310, 249 )
rect_scale = Vector2( 0.2, 0.2 )
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
flat = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="TouchButtonFullscreen"]

[node name="fullscreen" type="TextureRect" parent="TouchButtonFullscreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -460.0
margin_top = -374.5
margin_right = 460.0
margin_bottom = 374.5
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="touched" from="TouchButtonRight" to="." method="_on_touch_button_touched"]
[connection signal="touched" from="TouchButtonLeft" to="." method="_on_touch_button_touched"]
[connection signal="mouse_entered" from="TouchButtonFullscreen" to="TouchButtonFullscreen" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="TouchButtonFullscreen" to="TouchButtonFullscreen" method="_on_mouse_exited"]
[connection signal="pressed" from="TouchButtonFullscreen" to="TouchButtonFullscreen" method="_on_pressed"]
